optimise the database engine